- Fix message paging navigation div effectively disables preview pane checkbox on narrow screen widths (#1488425)

--- a/skins/default/common.css
+++ b/skins/default/common.css
@@ -375,11 +375,6 @@ body.iframe .boxtitle
   opacity: 0.35;
 }
 
-.pagenav
-{
-  min-width: 250px;
-}
-
 .pagenav span
 {
   color: #444;
